--- a/index.html
+++ b/index.html
@@ -14,27 +14,20 @@
     :root{ --bg1:#0f0f1b; --bg2:#1c1b2a; }
     *{ box-sizing:border-box; }
     html,body{height:100%;margin:0}
-    body{ overflow:hidden; background:radial-gradient(1200px 800px at 70% 10%, var(--bg2), var(--bg1) 60%); color:#fff; font-family:system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Noto Sans', sans-serif; touch-action:manipulation; }
+    body{ overflow:hidden; background:radial-gradient(1200px 800px at 70% 10%, var(--bg2), var(--bg1) 60%); color:#fff; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,'Noto Sans',sans-serif; touch-action:manipulation; }
     #stage{ position:relative; width:100%; height:100%; cursor:pointer; }
     .center-start{ position:absolute; inset:0; display:grid; place-content:center; text-align:center; gap:12px; user-select:none; }
     .title{ font-weight:900; font-size:clamp(28px,6vw,56px); text-shadow:0 8px 24px rgba(0,0,0,.45); }
     .tap{ display:inline-block; padding:10px 16px; border-radius:999px; border:1px solid rgba(255,255,255,.18); background:rgba(255,255,255,.08); backdrop-filter:blur(8px); font-weight:700; box-shadow:0 6px 24px rgba(0,0,0,.25); }
     .love{ position:absolute; will-change:transform,opacity; pointer-events:none; font-weight:800; white-space:nowrap; filter:drop-shadow(0 6px 16px rgba(0,0,0,.25)); text-shadow:0 2px 8px rgba(0,0,0,.45); user-select:none; }
     .heartParticle{ position:absolute; pointer-events:none; font-size:22px; will-change:left,top,opacity; }
-    .bunny{ position:fixed; bottom:12px; width:120px; height:auto; user-select:none; pointer-events:none; filter: drop-shadow(0 6px 16px rgba(0,0,0,.35)); }
-    #bunny-left{ left:16px; }
-    #bunny-right{ right:16px; transform: scaleX(-1); }
-    @keyframes fallFloat{
-      0%{ transform:translate(var(--x,0),-60px) scale(var(--s,1)); opacity:0; }
-      20%{ opacity:1; }
-      70%{ transform:translate(var(--x,0),var(--fy,60vh)) scale(calc(var(--s,1)*1.05)); opacity:1;}
-      100%{ transform:translate(var(--x,0),calc(var(--fy,60vh) - 120px)) scale(calc(var(--s,1)*1.08)); opacity:0;}
-    }
-    @keyframes burst{
-      0%{ transform:translate(var(--bx,0),var(--by,0)) scale(var(--s,1)); opacity:0; }
-      10%{ opacity:1; }
-      100%{ transform:translate(calc(var(--bx,0) + var(--dx,0px)), calc(var(--by,0) + var(--dy,0px))) scale(calc(var(--s,1)*1.15)); opacity:0; }
-    }
+    .bunny{ position:fixed; bottom:22px; width:86px; height:auto; user-select:none; pointer-events:none; filter: drop-shadow(0 6px 16px rgba(0,0,0,.35)); animation: bunnyBounce 1.2s ease-in-out infinite; }
+    #bunny-left{ left:14px; }
+    #bunny-right{ right:14px; transform: scaleX(-1); }
+    @keyframes bunnyBounce{ 0%,100%{ transform: translateY(0) } 50%{ transform: translateY(-9px) } }
+    @keyframes fallFloat{ 0%{ transform:translate(var(--x,0),-60px) scale(var(--s,1)); opacity:0; } 20%{ opacity:1; } 70%{ transform:translate(var(--x,0),var(--fy,60vh)) scale(calc(var(--s,1)*1.05)); opacity:1;} 100%{ transform:translate(var(--x,0),calc(var(--fy,60vh) - 120px)) scale(calc(var(--s,1)*1.08)); opacity:0;} }
+    @keyframes burst{ 0%{ transform:translate(var(--bx,0),var(--by,0)) scale(var(--s,1)); opacity:0; } 10%{ opacity:1; } 100%{ transform:translate(calc(var(--bx,0) + var(--dx,0px)), calc(var(--by,0) + var(--dy,0px))) scale(calc(var(--s,1)*1.15)); opacity:0; } }
+    .footer-note{ position:fixed; bottom:8px; left:50%; transform:translateX(-50%); font-weight:700; color:#ffd1e8; text-shadow:0 2px 10px rgba(0,0,0,.6); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.15); border-radius:999px; padding:8px 12px; backdrop-filter: blur(6px); user-select:none; pointer-events:none; font-size:14px; }
   </style>
 </head>
 <body>
@@ -45,6 +38,7 @@
     </div>
     <img id="bunny-left" class="bunny" src="assets/bunny-left.gif" alt="Conejito izquierdo">
     <img id="bunny-right" class="bunny" src="assets/bunny-right.gif" alt="Conejito derecho">
+    <div class="footer-note">para vos 💖</div>
   </div>
 
   <script>
@@ -159,8 +153,8 @@
       const count = 120;
       const A = makeHeartPoints(midX - scale*6, topY, scale, count, -0.05);
       const B = makeHeartPoints(midX + scale*6, topY, scale, count, 0.05);
-      const leftSrc = {x: 90, y: H()-120};
-      const rightSrc = {x: W()-90, y: H()-120};
+      const leftSrc = {x: 60, y: H()-110};
+      const rightSrc = {x: W()-60, y: H()-110};
       A.forEach((p,i)=>{
         const src = (i%2===0)? leftSrc : rightSrc;
         spawnParticleTo(src.x, src.y, p[0], p[1], i*9);
